--- a/scss/abstracts/_breakpoints.scss
+++ b/scss/abstracts/_breakpoints.scss
@@ -5,3 +5,4 @@ $breakpoints: (
     'xl': 1200px,
 );
 $gutter: 20px;
+$nav-width: 200px;
