--- a/scss/components/_hero-img.scss
+++ b/scss/components/_hero-img.scss
@@ -7,6 +7,15 @@
         height: 100vh;
         overflow: hidden;
         position: relative;
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(#000, .25);
+        }
     }
     &-text {
         position: absolute;
@@ -16,6 +25,7 @@
         color: $white;
         text-align: center;
         font-size: 2rem;
+        z-index: 1;
     }
     &-scroll {
         position: absolute;
